# runebender-xilem

./: .clippy.toml  ARCHITECTURE.md  AUTHORS  CLAUDE.md  Cargo.toml  LLMS.md  README.md
assets/hyper-matisse.ufo/: fontinfo.plist  lib.plist
assets/untitled.ufo/: fontinfo.plist  groups.plist  kerning.plist
context/: components-implementation.md  designspace-support.md  kerning-implementation.md  keyboard-shortcuts-zstack.md  kurbo-version-mismatch.md  mouse-ui-events.md  outline-transforms-boolean-ops.md  refit-feature.md  rtl-bidi-support.md  sort-text-editor.md  text-input-placeholder-alignment.md
context/edit-mode-tools/: hyperbezier-pen-tool.md
docs/: hyperbezier-ufo-extension.md  knife-tool-port-plan.md
src/: config.rs  cubic_path.rs  data.rs  designspace.rs  edit_session.rs  edit_types.rs  file_watcher.rs  glyph_renderer.rs  hyper_path.rs  kerning.rs  lib.rs  main.rs  mouse.rs  path.rs  point.rs  point_list.rs  quadrant.rs  quadratic_path.rs  selection.rs  settings.rs  theme.rs  viewport.rs  workspace.rs
src/components/: category_panel.rs  coordinate_panel.rs  edit_mode_toolbar.rs  editor_canvas.rs  glyph_anatomy_panel.rs  glyph_info_panel.rs  glyph_preview_widget.rs  grid_scroll_handler.rs  keyboard_handler.rs  mark_color_panel.rs  master_toolbar.rs  mod.rs  shapes_toolbar.rs  size_tracker.rs  system_toolbar.rs  text_direction_toolbar.rs  toolbars.rs  transform_panel.rs  workspace_toolbar.rs
src/data/: editor.rs  file_io.rs  grid.rs  kerning.rs  mod.rs
src/editing/: background_image.rs  compat.rs  edit_types.rs  hit_test.rs  mod.rs  mouse.rs  (+5 more)
(+128 files in other folders)
