[package]
name = "runebender"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Eli Heuer <elih@protonmail.com>"]
license = "Apache-2.0"
description = "Runebender Xilem - A font editor written in Rust using Xilem"
repository = "https://github.com/eliheuer/runebender-xilem"

[[bin]]
name = "runebender"
path = "src/main.rs"

[dependencies]
# UI
xilem = "0.4"
masonry = "0.4"
winit = "0.30"

# Font/UFO handling
norad = "0.13"

# Linebender ecosystem
kurbo = "0.12"
kurbo_09 = { package = "kurbo", version = "0.9.5" }
parley = "0.6"
peniko = "0.5"
spline = { git = "https://github.com/linebender/spline" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unicode
unicode-general-category = "0.6"

# Utilities
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File dialogs
rfd = "0.15"

[dev-dependencies]
